# BDM_student_behavior_backend

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
artifacts/visualizations/: attitude_clustering_statistics.csv  attitude_score_crosstab.csv  score_clustering_statistics.csv
behavior_analysis/: __init__.py  __main__.py  attitude_test.py  config.py  score_attitude_cross_analysis_test.py
behavior_analysis/analysis/: __init__.py  attitude_analysis.py  attitude_clustering.py  basic_stats.py  clustering.py  score_attitude_cross_analysis.py  score_attitude_cross_demo.py  score_clustering.py
behavior_analysis/data/: __init__.py  converter.py  spark_manager.py  validator.py
behavior_analysis/utils/: __init__.py  file_utils.py  logger.py
behavior_analysis/visualization/: attitude_clustering_viz.py  score_attitude_cross_analysis_viz.py  score_clustering_viz.py
docker/compose/: docker-compose.yaml
docker/config/spark-conf/: log4j2.properties  spark-defaults.conf
docker/images/: Dockerfile.jupyter
tests/: __init__.py  test_attitude_clustering.py  test_clustering.py  test_score_clustering.py
