[project]
name = "bdm-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=7.1.0",
    "pyreadstat>=1.3.2",
    "pyspark[connect]==4.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250827",
]
