[project]
name = "bdm-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=7.1.0",
    "pyreadstat>=1.3.2",
    "pyspark[connect]==4.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250827",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.ruff]
# Python version
target-version = "py310"

# Line length
line-length = 100

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PTH", # flake8-use-pathlib
]

lint.ignore = [
    "E501",  # line too long (handled by formatter)
]

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "artifacts",
    "docker",
]

[tool.ruff.lint.isort]
known-first-party = ["behavior_analysis"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^.venv/",
    "^artifacts/",
    "^docker/",
]
